--- a/app/components/nd-inline-edit.html
+++ b/app/components/nd-inline-edit.html
@@ -1,15 +1,12 @@
 <form name="edit" novalidate data-ng-submit="save(edit)" data-layout="row">
-    <label>
+    <div class="form-group">
 	<div ng-class="{ 'has-error': edit.input.$touched && edit.input.$invalid }">
-        <input class="full-width" name="input" type="text" title="" autocomplete="off"
-               data-ng-model="editValue"
-               data-ng-class="{ error: edit.$dirty && hasError(edit.input.$error)}"
-	       required/>
-	</div>
-        <div class="help-block" ng-messages="edit.input.$error" ng-if="edit.input.$touched">
+	        <input class="form-control" name="input" type="text" title="" autocomplete="off" data-ng-model="editValue" required>
+        </div>
+        <div class="help-block" ng-messages="edit.input.$error" ng-if="edit.$submitted">
             <p ng-message="required"><small>Поле обязателено</small></p>
         </div>
-    </label>
+    </div>
     <div>
         <button class="btn-call-to-action btn-small" type="submit">
             Save
